<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityPagamento" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnDinheiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dinheiro" />

            <Button
                android:id="@+id/btnCartaoDebito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartao_debito" />

            <Button
                android:id="@+id/btnCartaoCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartao_credito" />

            <Button
                android:id="@+id/btnCheque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cheque" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/lblValorTotalVenda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/lblSaldoPagamentos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restante"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <br.com.sigen.cloudpos.view.component.NumberTextView
                        android:id="@+id/txtValorVenda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <br.com.sigen.cloudpos.view.component.NumberTextView
                        android:id="@+id/textSaldoPagamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/pagamentosListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@android:layout/simple_list_item_1" >
            </ListView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>