<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPosApp"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/btnLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D3D3D3" >

            <Button
                android:id="@+id/btnNovaVenda"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nova_venda" />

            <Button
                android:id="@+id/btnDescontoVenda"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Desconto" />

            <Button
                android:id="@+id/btnPagamento"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pagamento" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/lblTotalTextField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_venda"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/lblDesconto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/desconto"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <br.com.sigen.cloudpos.view.component.NumberTextView
                            android:id="@+id/textValorTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <br.com.sigen.cloudpos.view.component.NumberTextView
                            android:id="@+id/txtDesconto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutItensVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/listViewItensVenda"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cupom_color" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/produtosLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <AutoCompleteTextView
                        android:id="@+id/pesquisarProdutoField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" >

                        <requestFocus />
                    </AutoCompleteTextView>

                    <ListView
                        android:id="@+id/listViewProdutos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </LinearLayout>

                <NumberPicker
                    android:id="@+id/numberPicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>